# mnist_cnn

./: LICENSE  README.md  cloudbuild.yaml  config.yaml  data.dvc  pyproject.toml  requirements.txt  requirements_dev.txt  tasks.py
.dvc/: config
.github/workflows/: tests.yaml
data/processed/: test_target.pt  train_target.pt
dockerfiles/: api.dockerfile  evaluate.dockerfile  train.dockerfile
docs/: mkdocs.yaml
models/: model.pth
src/mnist_cnn/: api.py  data.py  download_artifact.py  train.py  visualize.py
tests/: test_data.py  test_model.py
tests/integrationtests/: test_apis.py
